<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/UserInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="172dp"
        android:text="@string/userInfo" />

    <Button
        android:id="@+id/GPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UserInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/gps" />

    <Button
        android:id="@+id/signOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="14dp"
        android:layout_marginTop="33dp"
        android:layout_toLeftOf="@+id/GPS"
        android:text="@string/signOut" />

    <Button
        android:id="@+id/mapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GPS"
        android:layout_marginTop="34dp"
        android:layout_toRightOf="@+id/signOut"
        android:text="@string/map" />

</RelativeLayout>
