<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:text="@string/RadiusTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />
    
    <EditText
        android:id="@+id/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/FirstNameTextView"
        android:layout_below="@+id/FirstNameTextView"
        android:ems="10" 
        android:inputType="text"/>
    
   <TextView
        android:id="@+id/LastNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/firstname"
        android:layout_centerVertical="true"
        android:text="@string/LastName" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/LastNameTextView"
        android:layout_below="@+id/LastNameTextView"
        android:ems="10" 
        android:inputType="text"/>
    
    <TextView
        android:id="@+id/EmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/lastname"
        android:layout_centerVertical="true"
        android:text="@string/Email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EmailTextView"
        android:layout_below="@+id/EmailTextView"
        android:ems="10" 
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/PasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_below="@+id/email"
        android:text="@string/Password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PasswordTextView"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword" />
    
    <TextView
        android:id="@+id/PasswordTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/password"
        android:text="@string/ReEnterPassword" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PasswordTextView2"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/password2"
        android:layout_below="@+id/password2"
        android:text="@string/RegisterButton" />

    <TextView
        android:id="@+id/FirstNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/LastNameTextView"
        android:layout_below="@+id/backButton3"
        android:layout_marginTop="28dp"
        android:text="@string/FirstName" />

    <Button
        android:id="@+id/backButton3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="14dp"
        android:text="@string/back" />

</RelativeLayout>
